# onyx_ui

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  REFACTORING_PLAN.md  SESSION_2025_11_06_SCROLLBAR_REFACTORING.md  SESSION_2025_11_11_WORKSPACE_PATTERN.md  TODO.md  YAML_THEME_ROADMAP.md  design.txt  screenshot_1762334366.txt  screenshot_1762541284.txt  screenshot_1763648922.txt  screenshot_1764161705.txt
backends/conio/: CMakeLists.txt  colors.hh  conio_app.cc  conio_app.hh  conio_backend.hh  conio_renderer.cc  dos_chars.h  dos_theme.hh  dos_theme_demo.cc  dos_theme_showcase.cc  drawing_utils.cc  drawing_utils.hh  main.cc  rect.hh  test_tb_events.cc  text_attributes_demo.cc  vram.cc  vram.hh
backends/conio/include/onyxui/conio/: colors.hh  conio_backend.hh  conio_backend_impl.hh  (+5 more)
backends/conio/src/: conio_backend.cc  conio_renderer.cc  conio_themes.hh  dos_chars.h  vram.cc  vram.hh
backends/conio/src/simple/: app_window.cc  run.cc
backends/conio/src/ui_app/: app_window.cc  run.cc
backends/conio/unittest/: CMakeLists.txt  conio_themes_original.hh  dll_entry.cc  dll_entry.hh  test_complete_theme.cc  test_conio_f_keys.cc  test_coverage_analysis.cc  test_directory_loading.cc  test_example_themes.cc  test_json_schema.cc  test_theme_builder_compat.cc  test_theme_loader.cc  test_widget_style_reflection.cc
backends/sdl2/: CMakeLists.txt  ROADMAP.md  demo.cc
backends/sdl2/src/: sdl2_backend.cc  sdl2_renderer.cc  sdl2_themes.hh
backends/sdlpp/: CMakeLists.txt  demo.cc  strategy_ui_demo.cc  tile_demo.cc
backends/sdlpp/src/: procedural_atlas.cc  sdlpp_backend.cc  sdlpp_renderer.cc  sdlpp_themes.hh  tile_backend.cc  tile_renderer.cc  win311_icons.cc  xpm_parser.cc
backends/sdlpp/src/simple/: app_window.cc  dialogs.cc  run.cc  runtime.cc
backends/sdlpp/src/ui_app/: app_window.cc  run.cc
examples/: CMakeLists.txt  demo.cc  demo.hh  demo_actions.hh  demo_menu_builder.hh  demo_ui_builder.hh  demo_utils.hh  demo_windows.hh  focus_manager_example.cc
examples/simple_hello/: main.cc
examples/widgets_demo/: backend_config.hh  main.cc  widgets_demo.hh
examples/widgets_demo/tabs/: tab_all_widgets.hh  tab_events_interaction.hh  tab_layout_scrolling.hh
examples/widgets_demo/windows/: about_dialog.hh  modal_dialog_example.hh  modeless_dialog_example.hh  mvc_demo_window.hh  window_registry.hh
ext/doctest/: CMakeLists.txt
ext/fkyaml/: CMakeLists.txt  fkyaml-minimal.cmake
ext/utf8cpp/: CMakeLists.txt  utf8cpp-minimal.cmake
unittest/: CMakeLists.txt  main.cc  test_backend_aliases.cc  test_config.hh.in  test_ui_host.cc
unittest/core/: test_backend_metrics.cc  test_background_renderer.cc  test_content_area.cc  test_dirty_tracking.cc  test_element.cc  test_exception_safety.cc  test_hit_test_path.cc  test_layer_manager.cc  test_layer_manager_events.cc  test_layer_manager_lifetime.cc  test_layer_manager_lifetime.cc.bak  test_logical_geometry.cc  test_logical_units.cc  test_minimal_overflow.cc  test_relative_coordinates.cc  test_render_context.cc  test_rule_of_five.cc  test_rule_of_five.cc.backup  test_scoped_clip.cc  test_scoped_layer.cc  test_signal_slot.cc  test_udim.cc
unittest/events/: test_event_phase.cc  test_event_routing.cc  test_event_target.cc  test_event_target_ui_event.cc  test_events.cc  test_ui_event.cc
unittest/focus/: test_focus_manager.cc
unittest/geometry/: test_coordinates.cc
unittest/hotkeys/: test_hotkey_manager.cc  test_hotkey_scheme.cc  test_hotkey_ui_event.cc  test_hotkeys.cc  test_key_chord.cc  test_semantic_action_guard.cc
unittest/layer/: test_layer_dirty_regions.cc
unittest/layout/: test_absolute.cc  test_anchor.cc  test_composition.cc  test_grid.cc  test_linear.cc  test_size_constraint.cc
unittest/mvc/: test_mvc_basic.cc  test_table_model.cc
unittest/reflection/: test_color_yaml.cc  test_coverage_analysis.cc  test_directory_loading.cc  test_enum_reflection.cc  test_fkyaml_basic.cc  test_font_reflection.cc  test_json_schema.cc  test_nested_structs.cc  test_reflectcpp_basic.cc  test_scrollbar_style_yaml.cc  test_theme_loader.cc  test_widget_style_reflection.cc
unittest/services/: test_window_manager.cc
unittest/simple/: test_runtime.cc
unittest/test_support/: CMakeLists.txt  test_types.hh  test_types_yaml.hh
unittest/testdata/schemas/: conio_theme_schema.json
unittest/theming/: test_fkyaml_anchors.cc  test_resolved_style.cc  test_stateful_color_resolution.cc  test_style_edge_cases.cc  test_style_inheritance.cc  test_style_pipeline.cc  test_style_resolution.cc  test_style_thread_safety.cc  test_theme_api.cc  test_theme_builder.cc  test_theme_defaults.cc  test_theme_inheritance.cc  test_theme_palette.cc
unittest/tile/: test_tile_animation.cc  test_tile_factory.cc  test_tile_game_ui_demo.cc  test_tile_optimization.cc  test_tile_renderer.cc  test_tile_run_app_integration.cc  test_tile_theme.cc  test_tile_types.cc  test_tile_widgets.cc
unittest/ui_app/: test_runtime.cc
unittest/utils/: layout_assertions.hh  rule_of_five_tests.hh  test_backend.hh  test_canvas.hh  test_canvas_backend.hh  test_color_utils.cc  test_helpers.hh  test_range_helpers.cc  test_safe_math.cc  test_visual_helpers.cc  visual_test_helpers.hh  warnings.hh
unittest/widgets/: test_absolute_panel.cc  test_actions.cc  test_anchor_panel.cc  test_border_corruption.cc  test_box_style_issue.cc  test_button.cc  test_button_group.cc  test_button_mouse_tracking.cc  test_checkbox.cc  test_combo_box.cc  test_combo_box_view.cc  test_complex_layouts.cc  test_content_area_bounds.cc  test_dialog.cc  test_factory_functions.cc  test_grid.cc  test_group_box.cc  test_group_box_layout.cc  test_hbox.cc  test_icon.cc  test_label.cc  test_layout_correctness.cc  test_layout_edge_cases.cc  test_line_edit.cc  test_list_box.cc  test_main_window.cc  test_menu_border_layout.cc  test_menu_hotkey_integration.cc  test_menu_item_measurement.cc  test_menu_system.cc  test_menu_visual.cc  test_menus.cc  test_mnemonics.cc  test_panel.cc  test_panel_layout.cc  test_presented_window.cc  test_progress_bar.cc  test_radio_button.cc  test_scroll_controller.cc  test_scroll_info.cc  (+48 more)
(+411 files in other folders)
